--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -11,7 +11,7 @@
 .game {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     justify-content: center;
     align-items: center;
@@ -85,6 +85,13 @@
 .result {
     margin-top: 20px;
     font-size: 1.2rem;
+}
+.rules {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+
 }
 
 /* Responsive Design */
