--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     background: #3a3a3a;
     color: #fff;
-    font-family: 'Merriweather', serif;
+    font-family: font-family: 'Merriweather', sans-serif;
 }
 
 /* To center everything in game */
@@ -24,16 +24,16 @@
     position: absolute;
     top: 0;
     font-size: 4rem;
-    
+    z-index: 2;
 }
 
 /* Score Board */
 .score {
     display: flex;
-    width: 40vw;
+    width: 30vw;
     justify-content: space-evenly;
     position: absolute;
-    top: 80px;
+    top: 70px;
     z-index: 1;
 }
 
@@ -51,8 +51,6 @@
     width: 50vw;
     justify-content: space-evenly;
     margin-top: 2rem;
-    position: relative;
-    top: 6%;
 }
 
 /* Styling on all three buttons */
@@ -72,8 +70,8 @@
 .move {
     font-size: 2rem;
     font-weight: bold;
-    position: relative;
 }
+
 /* Reload button style */
 .reload {
     display: none;
@@ -87,7 +85,7 @@
 }
 
 .result {
-    margin-top: 50px;
+    margin-top: 20px;
     font-size: 1.2rem;
 }
 
@@ -102,8 +100,11 @@
         top: 200px;
         width: 100vw;
     }
+    .move{
+        position: relative;
+        top: 350px;
+    }
 
     .options {
         width: 100vw;
     }
-}
