--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -2,11 +2,10 @@
 /* universal selector - Applies to whole document */
 * {
     padding: 0;
-    margin: 0;
     box-sizing: border-box;
     background: #3a3a3a;
     color: #fff;
-    font-family: font-family: 'Merriweather', sans-serif;
+    font-family: 'Merriweather', sans-serif;
 }
 
 /* To center everything in game */
@@ -107,4 +106,4 @@
 
     .options {
         width: 100vw;
-    }
+    }}
