--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -33,7 +33,6 @@
     justify-content: space-evenly;
     position: absolute;
     top: 70px;
-    z-index: 1;
 }
 
 /* Score  */
@@ -50,6 +49,7 @@
     width: 50vw;
     justify-content: space-evenly;
     margin-top: 2rem;
+
 }
 
 /* Styling on all three buttons */
@@ -64,7 +64,7 @@
     border-color: blue;
     border: none;
     cursor: pointer;
-}
+} 
 
 .move {
     font-size: 2rem;
@@ -74,17 +74,17 @@
 /* Reload button style */
 .reload {
     display: none;
-    margin-top: 2rem;
     padding: 1rem;
     background: blue;
     outline: none;
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    position: relative;
+    top: 20%;
 }
 
 .result {
-    margin-top: 20px;
     font-size: 1.2rem;
 }
 
@@ -95,13 +95,12 @@
     }
     .move{
         position: relative;
-        top: 13%;
+        top: 30%;
 
     }
-
     .score {
         position: absolute;
-        top: 200px;
+        top: 140px;
         width: 100vw;
     }
     .options {
@@ -111,6 +110,9 @@
     }
     .result{
         position: relative;
-        top: 5%;
+       }
+    .rock .scissor .paper{
+        position: relative;
+            top: 70%;
+        }
     }
-}
