--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 /* universal selector - Applies to whole document */
 * {
     padding: 0;
